@@ -13,11 +13,9 @@ import net.hypnoz.core.repository.FonctionsRepository;
 import net.hypnoz.core.utils.FormatText;
 import net.hypnoz.core.utils.RequesteResponsheandler.RequestErrorEnum;
 import net.hypnoz.core.utils.exceptions.ResponseException;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.stereotype.Service;
 
@@ -25,7 +23,6 @@ import javax.transaction.Transactional;
 import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -34,8 +31,8 @@ public class FonctionsService {
     private final FonctionsRepository repository;
     private final FonctionsMapper fonctionsMapper;
     private final ApplicationsRepository applicationsRepository;
-   /* @Value("${fonction-url}")
-    private String fonctionUrl;*/
+    @Value("${fonction-url}")
+    private String fonctionUrl;
 
     public FonctionsService(FonctionsRepository repository, FonctionsMapper fonctionsMapper, ApplicationsRepository applicationsRepository) {
         this.repository = repository;
@@ -56,11 +53,6 @@ public class FonctionsService {
         return fonctionsMapper.toDto(repository.findById(id).orElseThrow(ResourceNotFoundException::new));
     }
 
-    public Page<FonctionsDto> findByCondition(FonctionsDto fonctionsDto, Pageable pageable) {
-        Page<Fonctions> entityPage = repository.findAll(pageable);
-        List<Fonctions> entities = entityPage.getContent();
-        return new PageImpl<>(fonctionsMapper.toDto(entities), pageable, entityPage.getTotalElements());
-    }
 
     public FonctionsDto update(FonctionsDto fonctionsDto, Long id) {
         FonctionsDto data = findById(id);
@@ -76,15 +68,15 @@ public class FonctionsService {
             ObjectMapper objectMapper = new ObjectMapper();
             TypeReference<List<FonctionsDto>> typeReference = new TypeReference<List<FonctionsDto>>(){};
             List<FonctionsDto> o = objectMapper.readValue(resource.getInputStream(),typeReference);
-            return o.stream().filter(p-> Objects.equals(p.getModule(),applications.getModule())&& Objects.equals(p.getApplication(), applications.getCode())).map(_l->{
-                Fonctions fonctions = fonctionsMapper.toEntity(_l);
+            return o.stream().filter(p-> Objects.equals(p.getModule(),applications.getModule())&& Objects.equals(p.getApplication(), applications.getCode())).map(fonctionsDto->{
+                Fonctions fonctions = fonctionsMapper.toEntity(fonctionsDto);
                 fonctions.setApplication(app.getCode());
                 fonctions.setApplicationsId(app.getId());
-                fonctions.setLibCode(FormatText.formatCode(_l.getLibCode()));
-                fonctions.setOrdre(FormatText.getOrdre(_l.getCode()));
+                fonctions.setLibCode(FormatText.formatCode(fonctionsDto.getLibCode()));
+                fonctions.setOrdre(FormatText.getOrdre(fonctionsDto.getCode()));
                 repository.saveAndFlush(fonctions);
                 return fonctionsMapper.toDto(fonctions);
-            }).collect(Collectors.toList());
+            }).toList();
         } catch (IOException e) {
             throw new ResponseException(RequestErrorEnum.ERROR_INSERT_OR_UPDATE_IN_DATABASE,e);
         }
