@@ -14,18 +14,15 @@ import net.hypnoz.core.repository.ModulesStructureRepository;
 import net.hypnoz.core.utils.FormatText;
 import net.hypnoz.core.utils.RequesteResponsheandler.RequestErrorEnum;
 import net.hypnoz.core.utils.exceptions.ResponseException;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -35,8 +32,8 @@ public class ModulesService {
     private final ModulesMapper modulesMapper;
     private final ModulesStructureRepository modulesStructureRepository;
 
-   /* @Value("${module-url}")
-    private String moduleUrl;*/
+   @Value("${module-url}")
+    private String moduleUrl;
 
     public ModulesService(ModulesRepository repository, ModulesMapper modulesMapper,
                           ModulesStructureRepository modulesStructureRepository) {
@@ -58,11 +55,6 @@ public class ModulesService {
         return modulesMapper.toDto(repository.findById(id).orElseThrow(ResourceNotFoundException::new));
     }
 
-    public Page<ModulesDto> findByCondition(ModulesDto modulesDto, Pageable pageable) {
-        Page<Modules> entityPage = repository.findAll(pageable);
-        List<Modules> entities = entityPage.getContent();
-        return new PageImpl<>(modulesMapper.toDto(entities), pageable, entityPage.getTotalElements());
-    }
 
     public ModulesDto update(ModulesDto modulesDto, Long id) {
         ModulesDto data = findById(id);
@@ -77,12 +69,12 @@ public class ModulesService {
                 ObjectMapper objectMapper = new ObjectMapper();
                 TypeReference<List<ModulesDto>> typeReference = new TypeReference<List<ModulesDto>>(){};
                 List<ModulesDto> o = objectMapper.readValue(resource.getInputStream(),typeReference);
-                return o.stream().map(_l->{
+                return o.stream().map(modulesDto->{
                     Modules mod = null;
-                    if (repository.findByCode(_l.getCode()).isEmpty()){
-                        mod = modulesMapper.toEntity(_l);
-                        mod.setLibCode(FormatText.formatCode(_l.getLibCode()));
-                        mod.setOrdre(FormatText.getOrdre(_l.getCode()));
+                    if (repository.findByCode(modulesDto.getCode()).isEmpty()){
+                        mod = modulesMapper.toEntity(modulesDto);
+                        mod.setLibCode(FormatText.formatCode(modulesDto.getLibCode()));
+                        mod.setOrdre(FormatText.getOrdre(modulesDto.getCode()));
                         repository.saveAndFlush(mod);
                         ModulesStructure modulesStructure = ModulesStructure.builder()
                                 .id(ModulesStructure.ModulesStructurePK.builder()
@@ -94,10 +86,10 @@ public class ModulesService {
                                 .build();
                         modulesStructureRepository.saveAndFlush(modulesStructure);
                     }else {
-                       mod = repository.findByCode(_l.getCode()).orElse(null);
+                       mod = repository.findByCode(modulesDto.getCode()).orElse(null);
                     }
                     return modulesMapper.toDto(mod);
-                }).collect(Collectors.toList());
+                }).toList();
         } catch (IOException e) {
             throw new ResponseException(RequestErrorEnum.ERROR_INSERT_OR_UPDATE_IN_DATABASE,e);
         }
